# ascii-render-core

./: .gitignore  README.md  pyproject.toml
src/ascii_render_core/: app.py  old app.py  render.py  render_ANSI.py
src/ascii_render_core.egg-info/: PKG-INFO
src/ascii_render_core/input/: input_image.py  input_video.py
src/ascii_render_core/output/: newoutput.py  output.py
